--- a/src/main/resources/com/gpuopenanalytics/jenkins/remotedocker/config/VolumeConfiguration/help-destPath.html
+++ b/src/main/resources/com/gpuopenanalytics/jenkins/remotedocker/config/VolumeConfiguration/help-destPath.html
@@ -1,1 +1,19 @@
-Define absolute path in container to mount directory from Docker host, defined by <b>Host Path</b>.
+<!--
+  ~ Copyright (c) 2019, NVIDIA CORPORATION.
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+<div>
+    Define absolute path in container to mount directory from Docker host, defined by
+    <b>Host Path</b>.
+</div>
