DOC Update help test for hostPath

--- a/src/main/resources/com/gpuopenanalytics/jenkins/remotedocker/config/VolumeConfiguration/help-hostPath.html
+++ b/src/main/resources/com/gpuopenanalytics/jenkins/remotedocker/config/VolumeConfiguration/help-hostPath.html
@@ -14,7 +14,8 @@
   ~ limitations under the License.
   -->
 <div>
-    Define absolute path on Docker Host to mount.
+    Define absolute path on docker host to mount. Remember that the docker host is the node executing the build, so this
+    path must exist on any node that may run the build.
     <br><br>
     Example: <b><code>/opt/test-data</code></b> or <b><code>/home/user/shared</code></b>
 </div>
