ENH Add Badge Icon & debug mode
Also fixes arguement order issue for UserConfigItem

--- a/src/main/resources/com/gpuopenanalytics/jenkins/remotedocker/job/AbstractDockerConfiguration/help-debug.html
+++ b/src/main/resources/com/gpuopenanalytics/jenkins/remotedocker/job/AbstractDockerConfiguration/help-debug.html
@@ -1,4 +1,3 @@
-<?jelly escape-by-default='true'?>
 <!--
   ~ The MIT License
   ~
@@ -22,33 +21,6 @@
   ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
   ~ THE SOFTWARE.
   -->
-
-<j:jelly xmlns:j="jelly:core"
-         xmlns:f="/lib/form"
-         xmlns:st="jelly:stapler">
-
-    <st:include page="main-config.jelly" class="${descriptor.clazz}" optional="false"/>
-
-    <f:advanced>
-        <f:section title="Advanced Settings">
-
-            <f:entry title="Debug" field="debug">
-                <f:checkbox/>
-            </f:entry>
-
-            <st:include page="advanced-config.jelly" class="${descriptor.clazz}" optional="true"/>
-
-            <f:entry title="Additional Settings">
-                <f:repeatableHeteroProperty field="configItemList"
-                                            addCaption="Add" deleteCaption="Delete" hasHeader="true" oneEach="true"/>
-            </f:entry>
-            <f:entry title="Manage Volumes">
-                <f:repeatableProperty field="volumes" minimum="0" header="Volume" var="item" add="Add Volume">
-                    <f:repeatableDeleteButton/>
-                </f:repeatableProperty>
-            </f:entry>
-        </f:section>
-    </f:advanced>
-
-</j:jelly>
-
+<div>
+    Whether to print out the docker commands in the console output
+</div>
